--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -17,4 +17,4 @@ RUN npm install
 EXPOSE 4200
 
 # Ejecutar el servidor Angular en el contenedor
-CMD cd frontend && ng serve --host 0.0.0.0 --port 4200
+CMD ng serve --host 0.0.0.0 --port 4200
