--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     build: ./backend
     ports:
       - "8080:8080"
+    restart: always
     depends_on:
       - mysql
     networks:
