--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -60,8 +60,8 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "port": 4200,
-            "host": "0.0.0.0",  // Asegura que Angular escuche en todas las interfaces de red
-            "disableHostCheck": true,  // Desactiva la verificación del host (solo para pruebas)
+            "host": "0.0.0.0",  
+            "disableHostCheck": true,
             "browserTarget": "hello2:build:development"
           },
           "configurations": {
