--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,12 +26,12 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    # Paso 1: Instalar Java (para el backend)
+    # Paso 1: Instalar JDK 11 (usando la distribución Adoptium)
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
         java-version: '11'
-        distribution: 'adoptopenjdk'
+        distribution: 'adoptium'  # Usar adoptium en lugar de adoptopenjdk
 
     # Paso 2: Instalar Node.js (para el frontend)
     - name: Set up Node.js
