--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,21 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    # Paso 1: Instalar Docker
+    - name: Set up Docker
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y docker.io
+        sudo systemctl start docker
+        sudo systemctl enable docker
+        
+    - name: Install Docker Compose
+      run: |
+        sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+        sudo chmod +x /usr/local/bin/docker-compose
+        docker-compose --version  # Verifica la instalación
+
+
     # Paso 1: Instalar JDK 11 (usando la distribución Adoptium)
     - name: Set up JDK 11
       uses: actions/setup-java@v3
