--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,12 +34,13 @@ jobs:
         sudo systemctl start docker
         sudo systemctl enable docker
         
+    # Paso 2: Instalar Docker Compose
     - name: Install Docker Compose
       run: |
-        sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-        sudo chmod +x /usr/local/bin/docker-compose
-        docker-compose --version  # Verifica la instalación
-
+       sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+       sudo chmod +x /usr/local/bin/docker-compose
+       sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose  # Enlaza docker-compose si es necesario
+       docker-compose --version  # Verifica la instalación
 
     # Paso 1: Instalar JDK 11 (usando la distribución Adoptium)
     - name: Set up JDK 11
