--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,12 +26,15 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    # Paso 1: Instalar Docker
-# Paso 1: Instalar Docker y una versión específica de containerd
+# Paso 1: Instalar Docker usando el repositorio oficial (sin versiones específicas)
     - name: Set up Docker
       run: |
+        sudo apt-get update  
+        sudo apt-get install -y apt-transport-https ca-certificates curl software-properties-common
+        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+        sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
         sudo apt-get update
-        sudo apt-get install -y docker-ce=5:20.10.16~3-0~ubuntu-focal docker-ce-cli=5:20.10.16~3-0~ubuntu-focal containerd.io=1.4.9-1
+        sudo apt-get install -y docker-ce docker-ce-cli containerd.io
         sudo systemctl start docker
         sudo systemctl enable docker
         
