--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,10 +96,10 @@ jobs:
       run: |
         sleep 30  # Espera para asegurar que los contenedores estén listos
 
-    # Paso 8: Ejecutar pruebas de Cypress
+    # Paso 11: Ejecutar Cypress en modo headless sin TTY
     - name: Run Cypress Tests
       run: |
-        docker-compose -f docker-compose.yml exec cypress npx cypress run --headless --no-exit
+        docker-compose -f docker-compose.yml exec -T cypress npx cypress run --headless --no-exit
     
     # Paso 9: Detener y eliminar contenedores
     - name: Stop and remove containers
